--- a/style.css
+++ b/style.css
@@ -72,3 +72,21 @@ footer {
   font-size: 1rem;
   margin-top: auto;
 }
+
+#like-dislike {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+#like-btn, #dislike-btn {
+  padding: 5px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#like-btn:hover, #dislike-btn:hover {
+  background-color: #e6e6e6;
+}
